Add multi-digit identification

--- a/mnist-digit-classification.ipynb
+++ b/mnist-digit-classification.ipynb
@@ -24,12 +24,14 @@
       },
       "source": [
         "import cv2\n",
+        "import imutils\n",
         "import numpy as np\n",
         "import seaborn as sns\n",
         "import tensorflow as tf\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "from base64 import b64decode\n",
+        "from imutils import contours\n",
         "from google.colab.output import eval_js\n",
         "from IPython.display import HTML, Image\n",
         "from google.colab.patches import cv2_imshow\n",
@@ -42,7 +44,7 @@
         "from keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPool2D, BatchNormalization\n",
         "from sklearn.metrics import confusion_matrix, precision_score, recall_score, f1_score, cohen_kappa_score"
       ],
-      "execution_count": 60,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -61,7 +63,7 @@
         "print(X_train.shape, y_train.shape)\n",
         "print(X_test.shape, y_test.shape)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +100,7 @@
         " \n",
         "plt.show()"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -132,7 +134,7 @@
         "plt.title(\"Number of digit classes\")\n",
         "# y_train.value_counts()"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,7 +181,7 @@
         "X_train = X_train / 255.0\n",
         "X_test = X_test / 255.0"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +200,7 @@
         "\n",
         "print(X_train.shape, X_test.shape)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +227,7 @@
         "\n",
         "print(y_train.shape, y_test.shape)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,7 +260,7 @@
         "\n",
         "datagen.fit(X_train)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -299,7 +301,7 @@
         "  validation_data=(X_test, y_test)\n",
         ")"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +362,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +417,7 @@
         "plt.plot(history.history['val_loss'], label='test')\n",
         "plt.legend();"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -444,7 +446,7 @@
       "source": [
         "model.evaluate(X_test, y_test)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,7 +494,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -517,7 +519,7 @@
       "source": [
         "model.save(\"model.h5\")"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -529,7 +531,31 @@
         "# Load the model\n",
         "model = load_model(\"model.h5\")"
       ],
-      "execution_count": 82,
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qvD0a3BQkvQF"
+      },
+      "source": [
+        "def pad_image(img):\n",
+        "  desired_size = 28\n",
+        "  old_size = img.shape[:2] # old_size is in (height, width) format\n",
+        "  ratio = float(desired_size)/max(old_size)\n",
+        "  new_size = tuple([int(x*ratio) for x in old_size])\n",
+        "  img = cv2.resize(img, (new_size[1], new_size[0]))\n",
+        "\n",
+        "  delta_w = desired_size - new_size[1]\n",
+        "  delta_h = desired_size - new_size[0]\n",
+        "  top, bottom = delta_h//2, delta_h-(delta_h//2)\n",
+        "  left, right = delta_w//2, delta_w-(delta_w//2)\n",
+        "\n",
+        "  color = [0, 0, 0]\n",
+        "  return cv2.copyMakeBorder(img, top, bottom, left, right, cv2.BORDER_CONSTANT, value=color)"
+      ],
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -539,28 +565,43 @@
       },
       "source": [
         "def make_prediction(path):\n",
-        "  # Read image\n",
+        "  predictions = []\n",
+        "\n",
+        "  # Read image and convert to inverted grayscale\n",
         "  img = cv2.imread(path)\n",
+        "  inverted = cv2.bitwise_not(img)\n",
+        "  gray = cv2.cvtColor(inverted, cv2.COLOR_BGR2GRAY)\n",
         "\n",
-        "  # Conver to grayscale\n",
-        "  img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+        "  # Find the contours\n",
+        "  cnts = cv2.findContours(gray.copy(), cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+        "  cnts = imutils.grab_contours(cnts)\n",
         "\n",
-        "  # Invert image\n",
-        "  img = cv2.bitwise_not(img)\n",
+        "  # Sort the contours from left to right\n",
+        "  digitCnts = contours.sort_contours(cnts, method=\"left-to-right\")[0]\n",
+        "  digits = []\n",
         "\n",
-        "  # Resize to 28x28\n",
-        "  img = cv2.resize(img, (28, 28))\n",
+        "  # Extract the portions bounded by the contours\n",
+        "  for c in digitCnts:\n",
+        "    x, y, w, h = cv2.boundingRect(c)\n",
+        "    roi = gray[y:y + h, x:x + w]\n",
+        "    digits.append(roi)\n",
         "\n",
-        "  # Reshape 2d to 3d\n",
-        "  img = img.reshape(1, 28, 28, 1)\n",
+        "  for digit in digits:\n",
+        "    # Pad the image so that it's 28x28\n",
+        "    digit = pad_image(digit)    \n",
         "\n",
-        "  # Normalize image\n",
-        "  img = img.astype('float32')\n",
-        "  img = img / 255.0\n",
+        "    # Reshape 2d to 3d\n",
+        "    digit = digit.reshape(1, 28, 28, 1)\n",
         "\n",
-        "  return np.argmax(model.predict(img), axis=-1)"
+        "    # Normalize image\n",
+        "    digit = digit.astype('float32')\n",
+        "    digit = digit / 255.0\n",
+        "\n",
+        "    predictions.append(np.argmax(model.predict(digit), axis=-1)[0])\n",
+        "\n",
+        "  return predictions"
       ],
-      "execution_count": 85,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -624,7 +665,7 @@
         "    f.write(binary)\n",
         "  return len(binary)"
       ],
-      "execution_count": 54,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -632,22 +673,22 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 320
+          "height": 290
         },
         "id": "SgKnRWddFAu0",
-        "outputId": "b4e46ee7-5eab-4770-fd42-4acfd90a1dd5"
+        "outputId": "812f8216-28e0-4f0a-fc8e-76441d75a5bf"
       },
       "source": [
-        "draw(filename=\"test.png\", w=280, h=280, line_width=20)"
+        "draw(filename=\"test.png\", w=500, h=250, line_width=20)"
       ],
-      "execution_count": 91,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "<canvas width=280 height=280></canvas>\n",
+              "<canvas width=500 height=250></canvas>\n",
               "\n",
               "<button>Finish</button>\n",
               "\n",
@@ -703,13 +744,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "4630"
+              "7507"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 91
+          "execution_count": 98
         }
       ]
     },
@@ -720,20 +761,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1fRvXZe2M5Hc",
-        "outputId": "58014f4f-edd3-4a64-96a0-3d7057e367b8"
+        "outputId": "ba70fa96-5658-4be1-9952-fc9e757e317a"
       },
       "source": [
         "# Predict number\n",
-        "prediction = make_prediction(\"test.png\")\n",
+        "predictions = make_prediction(\"test.png\")\n",
         "\n",
-        "print(prediction)"
+        "print(\"\".join([str(digit) for digit in predictions]))"
       ],
-      "execution_count": 92,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[6]\n"
+            "1234\n"
           ],
           "name": "stdout"
         }
@@ -742,7 +783,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZqwuB8BFSYCw"
+        "id": "AK2ZBG-Oj4hy"
       },
       "source": [
         ""
